--- a/index.html
+++ b/index.html
@@ -3,17 +3,109 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="screen.css">
+    <title> Dribble Recreation</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Home</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse justify-content-between navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto d-flex align-items-center gap-5">
+            <li class="nav-item dropdown">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Popular
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Today</a></li>
+                  <li><a class="dropdown-item" href="#">This Week</a></li>
+                  <li><a class="dropdown-item" href="#">All Time</a></li>
+                </ul>
+              </li>  
+            <li class="nav-item">
+              <a class="nav-link" href="#">Discover</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Animation</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Branding</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Illustration</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Mobile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> Print > </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-    <script src="index.js"></script>
+    <div class="container my-5">
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card h-100 bg-drk text-dark">
+            <img src="https://placehold.co/300x200" class="card-img" alt="Image">
+            <div class="card-body">
+              <h6 class="card-title mb-1">Siege Media</h6>
+              <small class="texted-muted">193 likes * 67.4k views</small>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+        <div class="card h-100 bg-drk text-dark">
+          <img src="https://placehold.co/300x200" class="card-img" alt="Image">
+          <div class="card-body">
+            <h6 class="card-title mb-1">Orman Clark</h6>
+            <small class="texted-muted">98 likes * 24.4k views</small>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 bg-drk text-dark">
+          <img src="https://placehold.co/300x200" class="card-img" alt="Image">
+          <div class="card-body">
+            <h6 class="card-title mb-1">Jordon Cheung</h6>
+            <small class="texted-muted">176 likes * 57.41k views</small>
+          </div>
+          </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100 bg-drk text-dark">
+          <img src="https://placehold.co/300x200" class="card-img" alt="Image">
+          <div class="card-body">
+            <h6 class="card-title mb-1">Aldo Crusher</h6>
+            <small class="texted-muted">65 likes * 6.7 views</small>
+          </div>
+          </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100 bg-drk text-dark">
+              <img src="https://placehold.co/300x200" class="card-img" alt="Image">
+              <div class="card-body">
+                <h6 class="card-title mb-1">Canto</h6>
+                <small class="texted-muted">Hide ads * Advertise</small>
+            </div>
+            </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card h-100 bg-drk text-dark">
+                <img src="https://placehold.co/300x200" class="card-img" alt="Image">
+                <div class="card-body">
+                  <h6 class="card-title mb-1">Ramy Wafaa</h6>
+                  <small class="texted-muted">513 likes * 143k views</small>
+                  </div>
+                </div>
+                </div>
+                </div>
+
+                </div>
+              </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
 </html>
